--- a/app/src/main/res/layout/sale_item_row.xml
+++ b/app/src/main/res/layout/sale_item_row.xml
@@ -1,31 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/itemLayout"
     android:focusable="true"
     android:clickable="true"
     android:background="#C3C3C3"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:columnCount="4"
+    android:rowCount="2">
+
+    <ImageView
+        android:id="@+id/ivItem"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_columnSpan="2"
+        android:layout_rowSpan="2"
+        android:src="@drawable/ic_baseline_photo_camera_24" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/tvName"
-        tools:text="@tools:sample/full_names"
+        android:layout_width="282dp"
+        android:layout_height="50dp"
+        android:layout_row="0"
+        android:layout_column="2"
+        android:layout_columnSpan="2"
+        android:layout_rowSpan="1"
         android:padding="5dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#121212"
         android:textStyle="bold"
-        android:textColor="#121212"/>
+        tools:text="@tools:sample/full_names" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        tools:text="@tools:sample/full_names"
+        android:id="@+id/tvPrice"
+        android:layout_width="283dp"
+        android:layout_height="53dp"
+        android:layout_row="1"
+        android:layout_rowSpan="1"
+        android:layout_column="2"
+        android:layout_columnSpan="2"
         android:padding="5dp"
-        android:textColor="#121212"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/tvPrice" />
-</LinearLayout>
+        android:textColor="#121212"
+        tools:text="@tools:sample/full_names" />
+</GridLayout>
